ping-pong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
  namespace: ping-log
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - name: ping-port
      protocol: TCP
      port: 3456
      targetPort: 3456
    - name: log-port
      protocol: TCP
      port: 2345
      targetPort: 2345
